ASSERTION FAILED: childrenInline() in WebCore::RenderBlockFlow::hasLines https://bugs.webkit.org/show_bug.cgi?id=139396 <rdar://problem/27704339>

Reviewed by David Hyatt.

Source/WebCore:

RenderBlockFlow::hasLines() should be able to handle the block-children case.

Test: fast/ruby/assert-with-block-rt-child-and-emphasis.html

* rendering/RenderBlock.h:
(WebCore::RenderBlock::hasLines): Deleted.
* rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::hasLines):
* rendering/RenderBlockFlow.h:

LayoutTests:

* fast/ruby/assert-with-block-rt-child-and-emphasis-expected.txt: Added.
* fast/ruby/assert-with-block-rt-child-and-emphasis.html: Added.


Canonical link: https://commits.webkit.org/179294@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204908 268f45cc-cd09-0410-ab3c-d52691b4dbfc